--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -496,7 +496,7 @@
                   <div class="row">
                     <div class="col-md-6">
                       <table>
-                        <tr>
+                        <tr style="display:none">
                           <td>TID :</td>
                           <td>
                             <input type="text" name="tid" ng-model="todaysDate" readonly/>
@@ -514,13 +514,13 @@
                             <input type="text" name="order_id" ng-model="order"/>
                           </td>
                         </tr>
-                        <tr>
+                        <tr style="display:none">
                           <td>Amount :</td>
                           <td>
                             <input type="text" name="amount" ng-model="totalcart"/>
                           </td>
                         </tr>
-                        <tr>
+                        <tr style="display:none">
                           <td>Currency :</td>
                           <td>
                             <input type="text" name="currency" value="INR"/>
@@ -533,7 +533,7 @@
                           </td>
                         </tr>
                         <tr style="display:none">
-                          <td>Redirect URL :</td>
+                          <td>Cancel URL :</td>
                           <td>
                             <input type="text" name="cancel_url" value="http://selfcareindia.com"/>
                           </td>
