--- a/views/content/orderlist.html
+++ b/views/content/orderlist.html
@@ -1,62 +1,62 @@
 <section class="account">
-  <div class="selfcare-image">
-    <img src="img/banners/account.jpg" alt="">
-    <h2 class="text-uppercase get-center white font-semibold">my account</h2>
-  </div>
-  <div class="orderlist-title">
-    <div class="" ng-include="template.profile"></div>
-  </div>
-  <div class="account-main">
-    <div class="container">
-      <div class="alert-postion">
-        <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
-      </div>
-      <div class="account-tab">
-        <div class="relate no-plan" ng-if="msg !== ''">
-          <h3 class="get-center brand-brown-dark m-clear">{{msg}}</h3>
-        </div>
-        <div class="order-tab" ng-if="orders.length != 0">
-          <div class="cart-table">
-            <table class="table">
-              <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
-                <tr>
-                  <th class="text-center">Order Id</th>
-                  <th class="text-center">Items</th>
-                  <th class="text-center">Quantity</th>
-                  <th class="text-center">Total Amount</th>
-                </tr>
-              </thead>
-              <tbody ng-repeat="one in orders">
-                <tr class="text-center letter-space font-semibold" ng-repeat="order in one.product">
-                  <td>
-                    <span>{{order.order}}</span>
-                  </td>
-                  <td>
-                    <figure class="pointer">
-                      <div class="cart-imgholder m-center round">
-                        <img ng-src="{{order.image | serverimage}}" alt="" class="img-responsive">
-                      </div>
-                      <figcaption class="text-center text-uppercase">{{order.name}}</figcaption>
-                    </figure>
-                  </td>
-                  <td>
-                    <span>{{order.quantity}}</span>
-                  </td>
-                  <td  style="vertical-align:middle !important;">
-                    <div class="cart-total-amount">
-                      <p>RS. {{order.price}}</p>
-                    </div>
+   <div class="selfcare-image">
+      <img src="img/banners/account.jpg" alt="">
+      <h2 class="text-uppercase get-center white font-semibold">my account</h2>
+   </div>
+   <div class="orderlist-title">
+      <div class="" ng-include="template.profile"></div>
+   </div>
+   <div class="account-main">
+      <div class="container">
+         <div class="alert-postion">
+            <uib-alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert($index)" class="text-center" dismiss-on-timeout="5000">{{alert.msg}}</uib-alert>
+         </div>
+         <div class="account-tab">
+            <div class="relate no-plan" ng-if="msg !== ''">
+               <h3 class="get-center brand-brown-dark m-clear">{{msg}}</h3>
+            </div>
+            <div class="order-tab" ng-if="orders.length != 0">
+               <div class="cart-table">
+                  <table class="table">
+                     <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
+                        <tr>
+                           <th class="text-center">Order Id</th>
+                           <th class="text-center">Items</th>
+                           <th class="text-center">Quantity</th>
+                           <th class="text-center">Total Amount</th>
+                        </tr>
+                     </thead>
+                     <tbody ng-repeat="one in orders">
+                        <tr class="text-center letter-space font-semibold" ng-repeat="order in one.product">
+                           <td>
+                              <span>{{order.order}}</span>
+                           </td>
+                           <td>
+                              <figure class="pointer">
+                                 <div class="cart-imgholder m-center round">
+                                    <img ng-src="{{order.image | serverimage}}" alt="" class="img-responsive">
+                                 </div>
+                                 <figcaption class="text-center text-uppercase">{{order.name}}</figcaption>
+                              </figure>
+                           </td>
+                           <td>
+                              <span>{{order.quantity}}</span>
+                           </td>
+                           <td style="vertical-align:middle !important;">
+                              <div class="cart-total-amount">
+                                 <p>RS. {{order.price}}</p>
+                              </div>
 
-                  </td>
-                </tr>
-                <tr class="text-center letter-space font-semibold" ng-repeat="product in one.plans">
-                  <td>
-                    <span>{{product.order}}</span>
-                  </td>
-                  <td class="plan-cart">
-                    <div class="">
-                      <h4 class="text-capitalize plan-name m-center">{{product.subtype}}</h4>
-                      <h5 class="text-capitalize">
+                           </td>
+                        </tr>
+                        <tr class="text-center letter-space font-semibold" ng-repeat="product in one.plans">
+                           <td>
+                              <span>{{product.order}}</span>
+                           </td>
+                           <td class="plan-cart">
+                              <div class="">
+                                 <h4 class="text-capitalize plan-name m-center">{{product.subtype}}</h4>
+                                 <h5 class="text-capitalize">
                         <span class="block" ng-if="product.months == '1'">{{product.months}} month</span>
                         <span class="block" ng-if="product.months != '1'">{{product.months}} months</span>
                         <span ng-if="product.plan==1">Silver Plan</span>
@@ -64,33 +64,40 @@
                         <span ng-if="product.plan==3">Platinum Plan</span>
                         <span ng-if="product.plan==4">Diamond Plan</span>
                       </h5>
-                    </div>
-                  </td>
-                  <td>-</td>
-                  <td style="vertical-align:middle !important;">
-                    <div class="cart-amount">
-                    <p>RS. {{product.price}}</p>
-                  </div>
-                  </td>
+                              </div>
+                           </td>
+                           <td>-</td>
+                           <td style="vertical-align:middle !important;">
+                              <div class="cart-amount">
+                                 <p>RS. {{product.price}}</p>
+                              </div>
+                           </td>
 
-                </tr>
-                <tr>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td><div class="remove text-right">
-                  <button class="btn btn-primary text-uppercase no-radius">print invoice</button>
-                </div></td>
-              </tr>
-              </tbody>
-            </table>
-            <!-- <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
+                        </tr>
+                        <tr>
+                           <td>
+                              <div class="remove text-left" ng-if="one.trackingStatus">
+                                 <p class="orderstatus">Order Status : {{one.trackingStatus}}</p>
+                                 <p class="ordertrack" ng-if="one.trackingStatus!='Delivered'">Track Your Order <a href="{{one.trackUrl}}" target="_blank">Here</a></p>
+                              </div>
+                           </td>
+                           <td></td>
+                           <td></td>
+                           <td>
+                              <div class="remove text-right">
+                                 <button class="btn btn-primary text-uppercase no-radius">print invoice</button>
+                              </div>
+                           </td>
+                        </tr>
+                     </tbody>
+                  </table>
+                  <!-- <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
                   <span class="text-uppercase pull-left">Grand Total</span>
                   <span class="pull-right text-uppercase">Rs. 375.00</span>
                 </div> -->
-          </div>
-        </div>
+               </div>
+            </div>
+         </div>
       </div>
-    </div>
-  </div>
+   </div>
 </section>
