--- a/views/content/recipes.html
+++ b/views/content/recipes.html
@@ -5,7 +5,7 @@
   </div>
   <div class="recipes-main">
     <div class="container">
-      <h2 class="brand-brown-dark text-uppercase text-center recipe-main-title">SELFCARE RECIPES</h2>
+      <!-- <h2 class="brand-brown-dark text-uppercase text-center recipe-main-title">SELFCARE RECIPES</h2> -->
       <div class="recipedetail-slider slider-customize">
         <flex-slider class="carousel" flex-slide="detail in recipedetail track by $index" animation="slide" item-width="350" control-nav="false">
           <li ui-sref="recipedetail({ id : detail.id })">
