--- a/views/content/team.html
+++ b/views/content/team.html
@@ -4,9 +4,9 @@
     <h2 class="text-uppercase get-center white font-semibold">The Selfcare Team</h2>
   </div>
   <div class="container" ng-init="teamone=true;teamtwo=false">
-    <div class="team-desc health-descp get-up brand-brown-bg white rel">
+    <!-- <div class="team-desc health-descp get-up brand-brown-bg white rel">
       <p></p>
-    </div>
+    </div> -->
   </div>
   <div class="team-members" ng-show="teamone">
     <div class="container">
