--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -875,7 +875,7 @@
 }
 // Health products
 .product-desc {
-  @include padding(50px);
+  @include padding(30px 50px);
   p {
     font-size: 17px;
   }
