--- a/views/content/home.html
+++ b/views/content/home.html
@@ -30,7 +30,7 @@
     <div class="row">
       <div class="col-md-4 col-sm-6">
         <div class="health-info">
-          <h3 class="brand-primary title text-uppercase font-gotham-bold">Health <span class="block">Packages</span></h3>
+          <h3 class="brand-primary title text-uppercase font-gotham-bold" ui-sref="healthpackages">Health <span class="block">Packages</span></h3>
           <p class="text-justify health-descp">Our packages focus on your health and weight management. Whether it’s managing any kind of health disorder, improving vitamin deficiency, shedding extra kilos or looking for specialized diet, we have it all for all age groups. By combining food with science, we ensure that as you lose weight your overall health and immunity improves.</p>
           <a href="#/healthpackages" class="btn btn-primary text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
@@ -40,9 +40,9 @@
       </div>
       <div class="col-md-4 col-sm-6">
         <div class="health-info">
-          <h3 class="brand-yellow title text-uppercase font-gotham-bold">Health <span class="block">Products</span></h3>
+          <h3 class="brand-yellow title text-uppercase font-gotham-bold">Health <span class="block" ui-sref="healthproducts({id:1})">Products</span></h3>
           <p class="text-justify health-descp">Healthy snacks &amp; munchies, an extensive range of vital vitamins, protein supplements, Suman Agarwal’s highly acclaimed cookbooks and workout aids like pedometers and weighing scales, we have everything you need to reach your health goals.</p>
-          <a href="#/healthproducts/1" class="btn btn-yellow text-uppercase font-gotham-bold letter-space know-more">know more</a>
+          <a ui-sref="healthproducts({id:1})" class="btn btn-yellow text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/health-products.png" alt="" class="img-responsive">
           </div>
@@ -50,7 +50,7 @@
       </div>
       <div class="col-md-4 col-sm-12">
         <div class="health-info">
-          <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block">sculpting</span></h3>
+          <h3 class="brand-blue title text-uppercase font-gotham-bold">cool <span class="block" ui-sref="coolsculpting">sculpting</span></h3>
           <p class="text-justify health-descp home-coolsculp-descp">The CoolSculpting is a procedure that eliminates stubborn fat safely and effectively, without any surgery or downtime. This fat reduction treatment is the only FDA-cleared procedure.</p>
           <a href="#/coolsculpting" class="btn btn-blue text-uppercase font-gotham-bold letter-space know-more">know more</a>
           <div class="health-imgholder">
