--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -75,7 +75,7 @@
                       <p class="white text-bold text-uppercase" ng-if="$index==3">diamond</p>
                       <p class="price">Rs
                         {{subplan.price_in_INR}}
-                        <sup>*</sup>
+                        <!-- <sup>*</sup> -->
                       </p>
                     </div>
                   </uib-tab-heading>
