--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -6,10 +6,11 @@
 
   <div class="container">
     <div class="about-desc get-up brand-brown-bg white health-descp relate">
-      <h3 class="text-uppercase font-semibold">What is health design</h3>
+      <h3 class="text-uppercase font-semibold">What is health design ?</h3>
       <p class="health-style font-baubodi">Only the fit know how fabulous it feels.</p>
-      <p class="health-descp">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs - be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance
-        of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
+      <p class="health-descp">Health Design at Selfcare means redesigning your life, nutritiously. We teach you to know your body better and empower you to make the right choices for a healthier lifestyle. At Selfcare, we give priority to your overall health and design programs
+        keeping your medical and genetic history in mind. Under the expert guidance of SumanAgarwal, an Oxford qualified clinical nutritionist as well as a fitness expert each health plan is created to fit your healthgoals, be it weight-loss, ailment
+        control, weight gain, pregnancy or anti-aging programs,without compromising on lifestyle.</p>
     </div>
   </div>
 
@@ -38,7 +39,7 @@
               <slide ng-repeat="slide in aboutSlides" active="slide.active">
                 <div class="inner-about-carousel">
                   <h3 class="text-uppercase text-center font-semibold">{{slide.title}}</h3>
-                  <span class="text-center font-semibold">{{slide.text}}</span>
+                  <!-- <span class="text-center font-semibold">{{slide.text}}</span> -->
                   <hr>
                   <p class="text-left brand-primary">{{slide.desc}}</p>
                 </div>
@@ -72,7 +73,7 @@
               <img src="img/about/checks.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Health Checks<span>&amp; Presentations</span></h3>
             </div>
-            <p>We give corporates/clubs presentations on leading a healthy way of life. This includes diet, exercise management and weight-loss tips.</p>
+            <p>We conduct health checks and wellness talks at corporates and clubs.</p>
           </div>
         </div>
       </div>
@@ -94,7 +95,7 @@
               <img src="img/about/workers.png" alt="" class="img-responsive">
               <h3 class="text-uppercase brand-primary font-semibold">Corporate<span>Care Programmes</span></h3>
             </div>
-            <p>We have corporate packages to motivate employees to lead a healthy way of life. Our packages include diet, exercise management and weight-loss tips.</p>
+            <p>Our corporate packages are specially designed to spread nutrition awareness and health maintenance for the over-worked employees.</p>
           </div>
         </div>
       </div>
@@ -114,9 +115,9 @@
           <div class="we-do-topics">
             <div class="we-do-title">
               <img src="img/about/plate.png" alt="" class="img-responsive">
-              <h3 class="text-uppercase brand-primary font-semibold">School<span>Meals</span></h3>
+              <h3 class="text-uppercase brand-primary font-semibold">School<span>programmes</span></h3>
             </div>
-            <p>We are consultants for a few exclusive schools where we outline and create wholesome, fun meals for the school canteen menu. We provide health checks for stressed out teenagers; specially designed and fine-tuned for VIII, IX and X class kids.</p>
+            <p>	Selfcare collaborates with schools to educate children on the importance of healthy nutrition. We are also consultants for a few exclusive schools where we outline and create wholesome, fun meals for the school canteen menu. </p>
           </div>
         </div>
       </div>
