--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -6,9 +6,9 @@
     </div>
   </div>
   <div class="container">
-    <div class="get-up brand-brown-bg relate">
+    <!-- <div class="get-up brand-brown-bg relate">
       <p class="text-justify white health-descp">Many ailments and health complaints can be rectified and reversed with a simple and nutritious diet. The right diet plan can contribute significantly to the recovery from lifestyle, hormonal and genetics related disorders. We provide tailor-made diet plans to overcome health &amp; wellbeing complaints while also targeting weight loss. Along with nutritional advice, we examine stipulated blood reports to see if you are genetically pre-disposed to any health ailments and also recommend vitamins to help keep future disorders at bay. These are specialized plans aimed at individuals with specific needs such as cholesterol, diabetes, PCOS pregnancy, etc.</p>
-    </div>
+    </div> -->
     <div class="health-manageselect">
       <div class="row-flex" ng-repeat="row in subpackages">
         <div class="col-flex" ng-repeat="package in row">
