--- a/views/footer.html
+++ b/views/footer.html
@@ -107,7 +107,7 @@
       <div class="col-md-4 col-sm-6">
         <div class="">
           <div class="note brand-primary-lighter letter-space">
-            <p>Receive monthly tips on the healthiest foods and excercizes, along with the latest plans and offers.</p>
+            <p>Receive tips on the healthiest foods and exercises, along with the latest plans and offers.</p>
           </div>
           <div class="mail">
             <form class="form-inline" name="subscribeForm" ng-submit="subscribe(subscribe,subscribeForm)" ng-hide="subsribeHide">
