--- a/views/content/orderlist.html
+++ b/views/content/orderlist.html
@@ -44,7 +44,7 @@
                            </td>
                            <td style="vertical-align:middle !important;">
                               <div class="cart-total-amount">
-                                 <p>RS. {{order.price}}</p>
+                                 <p>RS. {{orders.finalamount}}</p>
                               </div>
 
                            </td>
