--- a/sass/_mobile_harsh.scss
+++ b/sass/_mobile_harsh.scss
@@ -144,7 +144,7 @@
   .contact-location .clinic span {
     width: 90%;
     margin: 0 auto;
-    font-size: 28px;
+    font-size: 19px;
   }
   .user-login {
     width: auto;
@@ -438,7 +438,7 @@
   }
   .various .circle { width: 7%; }
   //contactUs
-  .contact-location .clinic span { font-size: 21px; }
+  // .contact-location .clinic span { font-size: 21px; }
   // contactusend
   // ailment control
   .pregnancy .consult-chart .noconsult { font-size: 18px; }
