--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -11,7 +11,7 @@
           </div>
       <div class="row">
         <div class="clinic text-center">
-          <span class="brand-primary font-semibold">Clinic Timings: Mon - Fri 9.30 a.m. to 6.00 p.m, and Sat 9.30a.m. to 1.30 p.m</span>
+          <span class="brand-primary font-semibold">Clinic Timings: Mon - Fri 9.30 a.m. to 6.00 p.m  and Sat 9.30a.m. to 1.30 p.m</span>
         </div>
       </div>
 
