--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,39 +7,39 @@
 @import "../bower_components/fancyBox/source/jquery.fancybox.css";
 @font-face {
   font-family: 'Baubodi';
-  src: url(../fonts/baubodi.ttf);
+  src: url("../fonts/baubodi.ttf");
 }
 @font-face {
   font-family: 'Vista Slab';
-  src: url(../fonts/vista_slab.otf);
+  src: url("../fonts/vista_slab.otf");
 }
 @font-face {
   font-family: 'Whitney Book';
-  src: url(../fonts/whitney_book.otf);
+  src: url("../fonts/whitney_book.otf");
 }
 @font-face {
   font-family: 'Whitney Light';
-  src: url(../fonts/whitney_light.otf);
+  src: url("../fonts/whitney_light.otf");
 }
 @font-face {
   font-family: 'Whitney Medium';
-  src: url(../fonts/whitney_medium.otf);
+  src: url("../fonts/whitney_medium.otf");
 }
 @font-face {
   font-family: 'Whitney Semibold';
-  src: url(../fonts/whitney_semibold.otf);
+  src: url("../fonts/whitney_semibold.otf");
 }
 @font-face {
   font-family: 'Gotham Rounded Book';
-  src: url(../fonts/gotham-rounded.otf);
+  src: url("../fonts/gotham-rounded.otf");
 }
 @font-face {
   font-family: 'Gotham Rounded Bold';
-  src: url(../fonts/gotham_bold.ttf);
+  src: url("../fonts/gotham_bold.ttf");
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.eot'), url(../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.woff) format('woff'), url(../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf) format('truetype'), url(../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.svg) format('svg');
+  src: url('../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.eot'), url("../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.woff") format('woff'), url("../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf") format('truetype'), url("../bower_components/bootstrap-sass/assets/fonts/bootstrap/glyphicons-halflings-regular.svg") format('svg');
 }
 /* Bootstrap Variables Goes Here */
 //$brand-primary: #0d9dff !default;
@@ -697,7 +697,7 @@ button {
     border: 6px solid #fff;
     @include square(175px);
     overflow: hidden;
-    background: url(../img/suman.jpg) no-repeat -110px -10px;
+    background: url("../img/suman.jpg") no-repeat -110px -10px;
   }
   .more-abt-suman {
     font-size: 20px;
@@ -772,7 +772,9 @@ button {
     border: none;
   }
 }
-.health-diet { padding: 40px 0; }
+.health-diet {
+  padding: 40px 0;
+}
 .diet-info {
   padding: 0 40px;
   h4 {
@@ -901,14 +903,14 @@ button {
         line-height: 20px;
         &:after {
           content: "";
-          background: url(../img/right.png) no-repeat;
+          background: url("../img/right.png") no-repeat;
           width: 59px;
           height: 49px;
           position: absolute;
         }
         &:before {
           content: "";
-          background: url(../img/left.png) no-repeat;
+          background: url("../img/left.png") no-repeat;
           width: 59px;
           height: 49px;
           position: absolute;
@@ -1769,11 +1771,11 @@ footer {
     min-height: 150px;
   }
   .package {
-    background: url(../img/foot-healthpack.jpg) no-repeat;
+    background: url("../img/foot-healthpack.jpg") no-repeat;
     background-size: cover;
   }
   .shop {
-    background: url(../img/health-shop.jpg) no-repeat;
+    background: url("../img/health-shop.jpg") no-repeat;
     background-size: cover;
   }
   .foot-btn {
@@ -2111,22 +2113,22 @@ footer {
   }
 }
 .nutri-one {
-  background-image: url(../img/nutri/genetic.png);
+  background-image: url("../img/nutri/genetic.png");
 }
 .nutri-two {
-  background-image: url(../img/nutri/blue-dna.jpg);
+  background-image: url("../img/nutri/blue-dna.jpg");
 }
 .nutri-three {
-  background-image: url(../img/nutri/nutri-blue.png);
+  background-image: url("../img/nutri/nutri-blue.png");
 }
 .nutri-four {
-  background-image: url(../img/nutri/benefits.png);
+  background-image: url("../img/nutri/benefits.png");
 }
 .nutri-five {
-  background-image: url(../img/nutri/doctor.jpg);
+  background-image: url("../img/nutri/doctor.jpg");
 }
 .nutri-six {
-  background-image: url(../img/nutri/mobile.jpg);
+  background-image: url("../img/nutri/mobile.jpg");
 }
 .doctor,
 .contact {
@@ -2194,14 +2196,14 @@ footer {
     }
     .flex-direction-nav .flex-prev {
       left: 50px;
-      background: url(../img/nutri/arrow-left.png) no-repeat;
+      background: url("../img/nutri/arrow-left.png") no-repeat;
       &:before {
         display: none;
       }
     }
     .flex-direction-nav .flex-next {
       right: 50px;
-      background: url(../img/nutri/arrow-right.png) no-repeat;
+      background: url("../img/nutri/arrow-right.png") no-repeat;
       &:before {
         display: none;
       }
@@ -2210,37 +2212,37 @@ footer {
 }
 .sculp-one {
   padding: 50px 80px;
-  background-image: url(../img/sculpting/belly.png);
+  background-image: url("../img/sculpting/belly.png");
 }
 .sculp-two {
   padding: 65px 80px;
-  background-image: url(../img/sculpting/fat.png);
+  background-image: url("../img/sculpting/fat.png");
 }
 .sculp-three {
-  background-image: url(../img/sculpting/video.jpg);
+  background-image: url("../img/sculpting/video.jpg");
 }
 .sculp-four {
   padding: 65px 80px;
-  background-image: url(../img/sculpting/works.png);
+  background-image: url("../img/sculpting/works.png");
 }
 .sculp-five {
   padding: 35px 80px;
-  background-image: url(../img/sculpting/improvement.png);
+  background-image: url("../img/sculpting/improvement.png");
 }
 .sculp-six {
   padding: 60px 80px 10px;
-  background-image: url(../img/sculpting/applicators.png);
+  background-image: url("../img/sculpting/applicators.png");
   .not-avail {
     margin: 40px 0 0;
   }
 }
 .sculp-seven {
   padding: 60px 80px;
-  background-image: url(../img/sculpting/ready.png);
+  background-image: url("../img/sculpting/ready.png");
 }
 .sculp-eight {
   padding: 40px 80px;
-  background-image: url(../img/sculpting/applicators.png);
+  background-image: url("../img/sculpting/applicators.png");
 }
 .faq-sculp {
   .faqslide {
@@ -2484,7 +2486,9 @@ footer {
   background-color: rgba(255,255,255,0.9);
   font-size: 20px;
 }
-.recipes-main { margin: 25px 0 60px; }
+.recipes-main {
+  margin: 25px 0 60px;
+}
 .recipe-imgholder {
   @include square(400px);
   overflow: hidden;
@@ -2664,14 +2668,14 @@ footer {
     background-size: 100% auto;
   }
   .tina {
-    background-image: url(../img/consulting/tina.jpg);
+    background-image: url("../img/consulting/tina.jpg");
     background-size: cover;
   }
   .left-pattern {
-    background-image: url(../img/consulting/left-pattern.jpg);
+    background-image: url("../img/consulting/left-pattern.jpg");
   }
   .right-pattern {
-    background-image: url(../img/consulting/right-pattern.jpg);
+    background-image: url("../img/consulting/right-pattern.jpg");
   }
   .tagline {
     padding: 120px 0;
@@ -2684,7 +2688,7 @@ footer {
         content: "";
         width: 50px;
         height: 40px;
-        background: url(../img/consulting/tag-left.png) no-repeat;
+        background: url("../img/consulting/tag-left.png") no-repeat;
         position: absolute;
         top: 0;
         left: -20px;
@@ -2693,7 +2697,7 @@ footer {
         content: "";
         width: 50px;
         height: 40px;
-        background: url(../img/consulting/tag-right.png) no-repeat;
+        background: url("../img/consulting/tag-right.png") no-repeat;
         position: absolute;
         top: 0;
         right: -20px;
@@ -3027,6 +3031,9 @@ footer {
   a {
     text-decoration: underline !important;
   }
+}
+.close {
+  padding: 10px;
 }
 @import "harsh";
 @import "mobile";
