--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -36,14 +36,14 @@
 
                 <span ng-if="!isBottom">
                   <span class="noconsult brand-brown-dark font-semibold">{{plan.months}}</span>
-                  <span class="text-uppercase white month font-gotham-bold" ng-show="plan.months==1">Month</span>
-                  <span class="text-uppercase white month font-gotham-bold" ng-hide="plan.months==1">Months</span>
-                  <!-- <span class="text-uppercase white duration font-gotham-bold">Duration</span> -->
+                <span class="text-uppercase white month font-gotham-bold" ng-show="plan.months==1">Month</span>
+                <span class="text-uppercase white month font-gotham-bold" ng-hide="plan.months==1">Months</span>
+                <!-- <span class="text-uppercase white duration font-gotham-bold">Duration</span> -->
                 </span>
 
                 <span ng-if="isBottom">
                   <span class="noconsult brand-brown-dark font-semibold">{{plan.consults}}</span>
-                  <span class="text-uppercase white month font-gotham-bold">consults</span>
+                <span class="text-uppercase white month font-gotham-bold">consults</span>
                 </span>
 
 
@@ -60,7 +60,7 @@
                       </span>
                       <span ng-if="isBottom">
                         <p class="white text-bold text-uppercase">Month<span ng-hide="plan.months==1">s</span></p>
-                        <p class="price text-capitalize">{{plan.months}}</p>
+                      <p class="price text-capitalize">{{plan.months}}</p>
                       </span>
                     </div>
                   </uib-tab-heading>
@@ -73,12 +73,12 @@
                       <p class="white text-bold text-uppercase" ng-if="$index==1">gold</p>
                       <p class="white text-bold text-uppercase" ng-if="$index==2">platinum</p>
                       <p class="white text-bold text-uppercase" ng-if="$index==3">diamond</p>
-                      <p class="price">Rs
-                        {{subplan.price_in_INR}}
+                      <p class="price">Rs {{subplan.price_in_INR}}
                         <!-- <sup>*</sup> -->
                       </p>
                     </div>
                   </uib-tab-heading>
+                  <div class="close" ng-click="closeAlert($index)"><i class="fa fa-close"></i></div>
                   <div class="chart-info">
                     <div class="tab-body">
                       <h5 class="text-uppercase font-semibold">{{subplan.title}}</h5>
@@ -97,7 +97,6 @@
                         <div style="display:none">
                           {{subplan.plan | showplan}}
                         </div>
-
                         <a ng-hide="planInCart(subplan.id)" class="white btn btn-primary text-uppercase" ng-click="cartAdd(subplan.id)">take this plan</a>
                         <a ng-show="planInCart(subplan.id)" disabled class="white btn btn-primary text-uppercase">Plan in your cart</a>
                         <!-- <p ng-if="$index==0">Silver plan rates are only applicable for online consulation.</p> -->
@@ -127,8 +126,8 @@
                 </a>
               </div>
             </div>
-          </uib-slide>
-        </uib-carousel>
+        </uib-slide>
+      </uib-carousel>
       </div>
     </div>
   </div>
