--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -93,7 +93,7 @@
                     <div class="tab-foot text-right">
                       <div class="plan">
                         <span class="note font-baubodi letter-space">
-                          <sup>*</sup>inclusive of all taxes</span>
+                          <sup></sup>inclusive of all taxes</span>
                         <div style="display:none">
                           {{subplan.plan | showplan}}
                         </div>
