--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -35,7 +35,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">silver</p>
-                      <p class="price">Rs 5900<sup>*</sup></p>
+                      <p class="price">Rs 5900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -61,7 +61,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -71,7 +71,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">gold</p>
-                      <p class="price">Rs 14900<sup>*</sup></p>
+                      <p class="price">Rs 14900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -98,7 +98,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -108,7 +108,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">platinum</p>
-                      <p class="price">Rs 27900<sup>*</sup></p>
+                      <p class="price">Rs 27900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -138,7 +138,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -148,7 +148,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-bold text-uppercase">diamond</p>
-                      <p class="price">Rs 37900<sup>*</sup></p>
+                      <p class="price">Rs 37900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -182,7 +182,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -213,7 +213,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">silver</p>
-                      <p class="price">Rs 9900<sup>*</sup></p>
+                      <p class="price">Rs 9900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -239,7 +239,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -249,7 +249,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">gold</p>
-                      <p class="price">Rs 27900<sup>*</sup></p>
+                      <p class="price">Rs 27900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -276,7 +276,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -286,7 +286,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">platinum</p>
-                      <p class="price">Rs 52900<sup>*</sup></p>
+                      <p class="price">Rs 52900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -316,7 +316,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -326,7 +326,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-bold text-uppercase">diamond</p>
-                      <p class="price">Rs 68900<sup>*</sup></p>
+                      <p class="price">Rs 68900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -360,7 +360,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -391,7 +391,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">silver</p>
-                      <p class="price">Rs 14900<sup>*</sup></p>
+                      <p class="price">Rs 14900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -417,7 +417,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -427,7 +427,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">gold</p>
-                      <p class="price">Rs 40900<sup>*</sup></p>
+                      <p class="price">Rs 40900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -454,7 +454,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -464,7 +464,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">platinum</p>
-                      <p class="price">Rs 74900<sup>*</sup></p>
+                      <p class="price">Rs 74900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -494,7 +494,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -504,7 +504,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-bold text-uppercase">diamond</p>
-                      <p class="price">Rs 97900<sup>*</sup></p>
+                      <p class="price">Rs 97900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -538,7 +538,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -568,7 +568,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">silver</p>
-                      <p class="price">Rs 17900<sup>*</sup></p>
+                      <p class="price">Rs 17900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -594,7 +594,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -604,7 +604,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">gold</p>
-                      <p class="price">Rs 52900<sup>*</sup></p>
+                      <p class="price">Rs 52900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -631,7 +631,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -641,7 +641,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">platinum</p>
-                      <p class="price">Rs 95900<sup>*</sup></p>
+                      <p class="price">Rs 95900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -671,7 +671,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -681,7 +681,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-bold text-uppercase">diamond</p>
-                      <p class="price">Rs 125900<sup>*</sup></p>
+                      <p class="price">Rs 125900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -715,7 +715,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -745,7 +745,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">silver</p>
-                      <p class="price">Rs 26900<sup>*</sup></p>
+                      <p class="price">Rs 26900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -771,7 +771,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -781,7 +781,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">gold</p>
-                      <p class="price">Rs 64900<sup>*</sup></p>
+                      <p class="price">Rs 64900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -808,7 +808,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -818,7 +818,7 @@
                   <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-bold text-uppercase">platinum</p>
-                      <p class="price">Rs 125900<sup>*</sup></p>
+                      <p class="price">Rs 125900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -848,7 +848,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
@@ -858,7 +858,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-bold text-uppercase">diamond</p>
-                      <p class="price">Rs 147900<sup>*</sup></p>
+                      <p class="price">Rs 147900<sup></sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -892,7 +892,7 @@
                     </div>
                     <div class="tab-foot text-right">
                       <div class="plan">
-                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup></sup>inclusive of all taxes</span>
                         <a href="#/checkout" class="white btn btn-primary text-uppercase">take this plan</a>
                       </div>
                     </div>
