--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -78,7 +78,7 @@
                       </p>
                     </div>
                   </uib-tab-heading>
-                  <div class="close" ng-click="closeTabs()"><i class="fa fa-close"></i></div>
+                  <div class="close" ng-click="closeTabs()"><i class="fa fa-close brand-primary"></i></div>
                   <div class="chart-info">
                     <div class="tab-body">
                       <h5 class="text-uppercase font-semibold">{{subplan.title}}</h5>
